# AgentEval

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE_UPDATE.md  ATTRIBUTIONS.md  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  DOCUMENTATION_INDEX.md  HOT_RELOAD_GUIDE.md  IMPLEMENTATION_TRACKER.md  INTEGRATED_COMPONENTS.md  LIVE_DEMO_GUIDE.md  META_RESPONSE_FIX.md  Makefile  NOTICE.md  PROJECT_STATUS.md  QUICK_START_JUDGES.md  README.md  REPOSITORY_ORGANIZATION.md  SCALING_CAPABILITIES.md  SUBMISSION_GUIDE.md  SYSTEM_ARCHITECTURE.md  TEST_COVERAGE_SUMMARY.md  WORKFLOWS.md  pyproject.toml  pytest.ini  setup-dev.sh
.claude/: settings.local.json
.codex_temp/: action_items.md  devpost_home.html  devpost_rules.html  progress_notes.md
.codex_tmp/: progress.md
.githooks/: pre-commit
architecture/: diagram.md  future_sidecar_architecture.md
attacks/: library.yaml
demo/: LIVE_DEMO_RUNBOOK.md  README.md  agenteval_chatbot_demo.py  agenteval_demo_mock.py  agenteval_live_demo.py  comprehensive_demo_config.yaml
demo/evidence/: dashboard.md  live-demo-latest.md
docs/: DEPLOYMENT.md
examples/: test_hot_reload.py
examples/demo_chatbot/: README.md  __init__.py  app.py  client.py
future/: README.md
future/infrastructure_archive/: DEPLOYMENT.md  README.md  deploy.sh
metrics/: library.yaml
personas/: library.yaml
req-docs/: AGENTS.md  AGILE_Implementation.md  ASSET_LICENSES.md  AUDIT_REPORT.md  AgentEval.md  BRD_AgentEval.md  CHANGE_LOG.md  COMPLIANCE_CHECKLIST.md  JUDGE_ACCESS.md  JUDGING_SCORECARD.md  PRD_AgentEval.md  PROGRESS_CHECKLIST.md  SUBMISSION_FREEZE.md  TAD_Technical_Architecture.md  TEAM_INFO.md  TEST_DEMO_PLAYBOOK.md
req-docs/templates/: aws_usage_form.md  change_log_form.md  deliverables_template.md  final_signoff_form.md  judge_access_form.md  license_manifest_form.md  multiple_submissions_form.md  support_plan_form.md  team_info_form.md
req-docs/video_plan/: presentation_flow.md  video_storyboard.md
scripts/: check-aws-services.sh  clean-generated-files.sh  pull-demo-results.sh  run-full-demo.sh  run-live-demo.sh  setup-live-demo.sh  setup.sh  teardown-live-demo.sh  verify-live-demo-setup.sh
src/agenteval/: __init__.py  config.py  container.py
tests/: conftest.py  test_html_rendering.py  test_metric_library_core.py  test_metric_library_structure.py  test_persona_library.py  test_utils.py
tests/integration/: test_agent_factories.py  test_campaign_flow.py  test_campaign_service.py  test_container.py  test_orchestrator_with_factories.py  test_report_service.py
tests/unit/: test_admin_routes.py  test_api_auth.py  test_aws_clients.py  test_base_agent.py  test_bedrock_client.py  test_campaign_orchestrator.py  test_campaign_service.py  test_cli.py  test_config.py  test_container.py  test_correlation_engine.py  test_dashboard_service.py  test_dashboard_turn_metrics.py  test_dynamodb_client.py  test_evidence_dashboard.py  (+23 more)
(+308 files in other folders)
